@@ -1,3 +1,8 @@
+2019-11-13  Akira Kakuto  <kakuto@w32tex.org>
+
+	* spc_dvips.c: Add -dDELAYSAFER in GS_CALCULATOR because
+	SAFER mode became the default in the gs-9.50.
+
 2019-09-08  Akira Kakuto  <kakuto@w32tex.org>
 
 	* dvi.c: Show appropriate message if unsupported pfa
